--- a/challenge_2/index.html
+++ b/challenge_2/index.html
@@ -6,28 +6,110 @@
     </head>
     <body>
         <header>
-            <h1> Haloween Collage!</h1>
+            <h1> Halloween Collage!</h1>
         </header>
-        <!--img  src="candy.png" alt="Candy"-->
-        <!-- Finish Part One Later-->
-        <h2>Countries I Want to Visit</h2>
+        <div class="row">
+            <div class="column">
+                <img src="images/skeletons.jpg" alt="skeleton bois" width="350">
+            </div>
+            <div class="column">
+                <img src="images/sospooky.png" alt="Spooky season pic" width="250">
+            </div>
+            <div class="column">
+                <img src="images/spoopy.jpg" alt="Some spoopy skeletons" width="250">
+            </div>
+            <div class="column">
+                <img src="images/ghostbois.jpg" alt="some good ol' ghost bois" width="350">
+            </div>
+        </div>
+        <div class="row">
+            <div class="column">
+                <img src="images/candy.png" alt="candy" width="350">
+            </div>
+            <div class="column">
+                <img src="images/scaryfaces.jpg" alt="pumpkin faces" width="250">
+            </div>
+            <div class="column">
+                <img src="images/vampcat.png" alt="vampcat" width="250">
+            </div>
+            <div class="column">
+                <img src="images/pumpkins.jpg" alt="pumpkin" width="350">
+            </div>
+        </div>
+        <h1>Countries I Want to Visit</h1>
         <ul>
             <li class="japan"> Japan <a href="https://www.japan-guide.com">(Nihon (write characters later))</a></li>
             <ul class="japan">
                 <li>Tokyo</li>
                 <ul>
-                    <li>Stuffffff</li>
+                    <li>Tokyo Disneyland</li>
+                    <li>Studio Ghibli Museum</li>
+                    <li>Tokyo National Museum</li>
+                    <li>Sensoji Temple</li>
+                    <li>Ginza</li>
+                    <li>Tokyo Tower</li>
                 </ul>
                 <li>Kyoto</li>
                 <ul>
-                    <li>Other stufffff</li>
+                    <li>Gion</li>
+                    <li>Nishiki Market</li>
+                    <li>Nijo Castle</li>
+                    <li>Philosopher's Walk</li>
+                    <li>Kyoto International Manga Museum</li>
                 </ul>
             </ul>
             <li class="iceland">Iceland <a href="https://www.iceland.is">(Island (add accent later))</a></li>
+            <ul class="iceland">
+                <li>Reykjavik</li>
+                <ul>
+                    <li>Aurora Borealis</li>
+                    <li>Golden Circle</li>
+                    <li>Hallgrimur's Church</li>
+                    <li>National Museum of Iceland</li>
+                </ul>
+            </ul>
             <li class="sweden">Sweden <a href="https://sweden.se">(Sverige)</a></li>
-            <li class="greece">Greece <a href="www.visitgreece.gr/">(Add... letters? later)</a></li>
+            <ul class="sweden">
+                <li>Stockholm</li>
+                <ul>
+                    <li>Djurgarden</li>
+                    <li>Gamla Stan</li>
+                    <li>Vasa Museum</li>
+                    <li>Royal Palace</li>
+                </ul>
+                <li>Malmo</li>
+                <ul>
+                    <li>Malmo Castle</li>
+                    <li>Sankt Petri Church</li>
+                    <li>Oresund Bridge</li>
+                </ul>
+            </ul>
+            <li class="greece">Greece <a href="https://www.discovergreece.com/en">(Add... letters? later)</a></li>
             <ul class="greece">
                 <li>Athens</li>
+                <ul>
+                    <li>Acropolis Museum</li>
+                    <li>Parthenon</li>
+                    <li>Acropolis</li>
+                    <li>Temple of Hephaestus</li>
+                </ul>
+                <li>Delphi</li>
+                <ul>
+                    <li>Delphi Ruins</li>
+                    <li>Temple of Apollo</li>
+                    <li>Castalian Spring</li>
+                    <il>Temple of Athena Pronaia</il>
+                </ul>
+            </ul>
+            <li class="ireland">Ireland <a href="https://www.ireland.ie/en">(Eireann)</a></li>
+            <ul class="ireland">
+                <li>Dublin</li>
+                <ul>
+                    <li>Dublin Castle</li>
+                    <li>Chester Beatty Library</li>
+                    <li>Abbey Theatre</li>
+                    <li>Natural History Museum</li>
+                </ul>
             </ul>
         </ul>
     </body>
