--- a/challenge_2/index.html
+++ b/challenge_2/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header>
-            <h1> Halloween Collage!</h1>
+            <h1> <center>Halloween Collage!</center></h1>
         </header>
         <div class="row">
             <div class="column">
@@ -38,7 +38,7 @@
         </div>
         <h1>Countries I Want to Visit</h1>
         <ul>
-            <li class="japan"> Japan <a href="https://www.japan-guide.com">(Nihon (write characters later))</a></li>
+            <li class="japan"> Japan <a href="https://www.japan-guide.com">(Nihon)</a></li>
             <ul class="japan">
                 <li>Tokyo</li>
                 <ul>
@@ -58,7 +58,7 @@
                     <li>Kyoto International Manga Museum</li>
                 </ul>
             </ul>
-            <li class="iceland">Iceland <a href="https://www.iceland.is">(Island (add accent later))</a></li>
+            <li class="iceland">Iceland <a href="https://www.iceland.is">(Island)</a></li>
             <ul class="iceland">
                 <li>Reykjavik</li>
                 <ul>
@@ -84,7 +84,7 @@
                     <li>Oresund Bridge</li>
                 </ul>
             </ul>
-            <li class="greece">Greece <a href="https://www.discovergreece.com/en">(Add... letters? later)</a></li>
+            <li class="greece">Greece <a href="https://www.discovergreece.com/en">(Ellada)</a></li>
             <ul class="greece">
                 <li>Athens</li>
                 <ul>
@@ -112,5 +112,52 @@
                 </ul>
             </ul>
         </ul>
+        <table style="width:100%">
+            <tr>
+                <th>Period</th>
+                <th>Class</th>
+                <th>Teacher</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Drama I</td>
+                <td>Ms. Meacham</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Honors Physics</td>
+                <td>Ms. Joseph</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Honors Web Dev</td>
+                <td>Mr. Patel(!)</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>Honors Advanced Algebra with Trig</td>
+                <td>Ms. Aleksiak</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>AP European History</td>
+                <td>Mr. Stepek</td>
+            </tr>
+            <tr>
+                <td>6</td>
+                <td>Lunch</td>
+                <td>N/A</td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td>AP English Language</td>
+                <td>Ms. Mikbel</td>
+            </tr>
+            <tr>
+                <td>8</td>
+                <td>PE II</td>
+                <td>Mr. Marchan</td>
+            </tr>
+        </table>
     </body>
 </html>
