--- a/challenge_3/inedx.html
+++ b/challenge_3/inedx.html
@@ -20,22 +20,83 @@
             <div class="row">
                 <div class="column">
                     <table class="image">
-                        <caption align="bottom">A picture of my dance friends and me!</caption>
-                        <tr><td><img src="images/dance.jpeg" alt="Dance friends and me"></td></tr>
+                        <caption class="caption" align="bottom">A picture of my dance friends and me!</caption>
+                        <tr><td><img src="images/dance.jpeg" alt="Dance friends and me" width=100%></td></tr>
                     </table>
                 </div>
                 <div class="column">
                     <table class="image">
-                        <caption align="bottom">A ukulele (that looks pretty similar to mine)!</caption>
-                        <tr><td><img src="images/ukulele.jpg" width="300px" alt="ukulele"></td></tr>
+                        <caption class="caption" align="bottom">A ukulele (that looks pretty similar to mine)!</caption>
+                        <tr><td><img src="images/ukulele.jpg" alt="ukulele" width=100%></td></tr>
                     </table>
                 </div>
                 <div class="column">
                     <table class="image">
-                        <caption align="bottom">Tales From Ovid, a book of mythological stories!</caption>
-                        <tr><td><img src="images/mythology.jpg" width="200px" alt="Tales From Ovid"></td></tr>
+                        <caption class="caption" align="bottom">Tales From Ovid, a book of mythological stories!</caption>
+                        <tr><td><img src="images/mythology.jpg" alt="Tales From Ovid" width=100%><td></tr>
                     </table>
                 </div>
+            </div>
+            <div class="row2">
+            <div id="facts" class="column2">
+                <h3>Basic Facts about me!</h3>
+                <ul>
+                    <li>I have been dancing for 11 years, but I've been at my current dance school for almost 10</li>
+                    <li>I've been en pointe for a little over 3 years</li>
+                    <li>I was in the Lane Tech academic center</li>
+                    <li>I took French for 3 years</li>
+                    <li>I've been outside the country three times: Canada, France, and England</li>
+                    <li>I went to a theatre summer camp for seven years</li>
+                    <li>I love music! I can play the ukulele and am learning the guitar</li>
+                    <li>I'm an only child</li>
+                    <li>I have a dog named Graham</li>
+                    <li>My middle name is Grace</li>
+                    <ul>
+                        <li>The reason behind this is because in Greek Mythology Thalia is one of the three Graces</li>
+                        <ul>
+                            <li>Thalia is also one of the Muses (the muse of comedy)</li>
+                        </ul>
+                        <li>Basically, my parents are just giant nerds</li>
+                    </ul>
+                </ul>
+            </div>
+            <div id="hobbies" class="column2">
+                <h3>Hobbies and Interests</h3>
+                <ul>
+                    <li>Dance</li>
+                    <ul>
+                        <li>I mostly do ballet and modern dance</li>
+                        <li>I have two parts in Hyde Park School of Dance's The Nutcracker this year</li>
+                        <li>I was a lead in one of HPSD's Halloween dances</li>
+                        <li>I dance at least 3 or 4 times a week</li>
+                        <li>My normal Saturday lasts from 10:15 till 8:30</li>
+                    </ul>
+                    <li>Music</li>
+                    <ul>
+                        <li>I've played the ukulele for almost two years</li>
+                        <li>I've had my Guitar for almost a year, but can only play one or two songs</li>
+                        <li>I played the flute for half a year around fourth grade, but that ended quickly</li>
+                        <li>I love to sing, but I think I sound awful</li>
+                    </ul>
+                    <li>Theatre</li>
+                    <ul>
+                        <li>I'm taking Drama I this year</li>
+                        <li>I went to Lookingglass's Summer Camp on the Lake for 7 years</li>
+                        <li>I always get the Broadway in Chicago season pass (I see a LOT of shows)</li>
+                    </ul>
+                    <li>Computer Science</li>
+                    <ul>
+                        <li>I've taken a CS class every year I've been at Lane</li>
+                        <ul>
+                            <li>ESC - Seventh Grade</li>
+                            <li>Media Comp. - Eighth Grade</li>
+                            <li>Innovation and Creation Lab - Freshman Year</li>
+                            <li>Web Dev - Sophomore Year</li>
+                        </ul>
+                        <li>I'm also on the Maker's Lab Pro Team (We might rebrand to the Elite Team though)</li>
+                    </ul>
+                </ul>
+            </div>
             </div>
         </body>
     </div>
