--- a/challenge_4/index.html
+++ b/challenge_4/index.html
@@ -11,6 +11,25 @@
             <p class="lead">A dance school on the south side of Chicago that offers ballet, pointe, modern, jazz, hip hop, and african dance</p>
           </div>
         </div>
+         <nav class="navbar navbar-expand-sm bg-light">
+          <ul class="navbar-nav">
+            <a class="navbar-brand" href="/challenge_4/index.html"><img src="images/hpsd.png" alt="hpsd logo" width="50px"></a>
+            <li class="nav-item">
+              <a class="nav-link" href="https://hydeparkdance.org/">HPSD's Website</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://hydeparkdance.org/tickets">Nutcracker Tickets</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://hydeparkdance.org/current-dancers--2">Dancer Information</a>
+            </li>
+            <form class="form-inline" action="/action_page.php">
+              <input class="form-control mr-sm-2" type="text" placeholder="Search">
+              <button class="btn btn-success" type="submit">Search</button>
+            </form>
+          </ul>
+        </nav>
+        <br>
         <div class="row">
             <div class="col-lg-3">
                 <div class="card" style="width: 18rem;">
@@ -70,5 +89,20 @@
                 </div>
             </div>
         </div>
+        <form action="/action_page.php">
+          <div class="form-group">
+            <label for="name">Name:</label>
+            <input type="name" class="form-control" id="pwd">
+          </div>
+          <div class="form-group">
+            <label for="email">Email address:</label>
+            <input type="email" class="form-control" id="email">
+          </div>
+           <div class="form-group">
+            <label for="message">Your message or question:</label>
+            <input type="message" class="form-control" id="email">
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
     </body>
 </html>
