--- a/challenge_4/index.html
+++ b/challenge_4/index.html
@@ -11,7 +11,8 @@
             <p class="lead">A dance school on the south side of Chicago that offers ballet, pointe, modern, jazz, hip hop, and african dance</p>
           </div>
         </div>
-         <nav class="navbar navbar-expand-sm bg-light">
+        <div class="container">
+         <nav class="navbar navbar-expand-sm bg-secondary navbar-dark">
           <ul class="navbar-nav">
             <a class="navbar-brand" href="/challenge_4/index.html"><img src="images/hpsd.png" alt="hpsd logo" width="50px"></a>
             <li class="nav-item">
@@ -29,65 +30,68 @@
             </form>
           </ul>
         </nav>
-        <br>
-        <div class="row">
-            <div class="col-lg-3">
-                <div class="card" style="width: 18rem;">
-                  <img class="card-img-top" src="images/msaugust.png" alt="Ms. August Tye">
-                  <div class="card-body">
-                    <h5 class="card-title">Ms. August</h5>
-                    <p class="card-text">Artistic Director and Ballet Teacher</p>
-                  </div>
-                </div>
-            </div>
-            <div class="col-lg-3">
-                <div class="card" style="width: 18rem;">
-                  <img class="card-img-top" src="images/allyson.jpg" alt="Ms. Allyson">
-                  <div class="card-body">
-                    <h5 class="card-title">Ms. Allyson</h5>
-                    <p class="card-text">Associate Artistic Director and Ballet Teacher</p>
-                  </div>
-                </div>
-            </div>
-            <div class="col-lg-3">
-                <div class="card" style="width: 18rem;">
-                  <img class="card-img-top" src="images/aimee.jpg" alt="Ms. Aimee">
-                  <div class="card-body">
-                    <h5 class="card-title">Ms. Aimee</h5>
-                    <p class="card-text">Ballet Teacher</p>
-                  </div>
-                </div>
-            </div>
         </div>
         <br>
-        <div class="row">
-            <div class="col-lg-3">
-                <div class="card" style="width: 18rem;">
-                  <img class="card-img-top" src="images/teanna.jpg" alt="Ms. Teanna">
-                  <div class="card-body">
-                    <h5 class="card-title">Ms. Teanna</h5>
-                    <p class="card-text">Ballet Teacher</p>
+        <div class="container-fluid">
+          <div class="row">
+              <div class="col-lg-3">
+                  <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="images/msaugust.png" alt="Ms. August Tye">
+                    <div class="card-body">
+                      <h5 class="card-title">Ms. August</h5>
+                      <p class="card-text">Artistic Director and Ballet Teacher</p>
+                    </div>
                   </div>
-                </div>
-            </div>
-            <div class="col-lg-3">
-                <div class="card" style="width: 18rem;">
-                  <img class="card-img-top" src="images/gayle.jpg" alt="Ms. Gayle">
-                  <div class="card-body">
-                    <h5 class="card-title">Ms. Gale</h5>
-                    <p class="card-text">Ballet Teacher (and scientist!)</p>
+              </div>
+              <div class="col-lg-3">
+                  <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="images/allyson.jpg" alt="Ms. Allyson">
+                    <div class="card-body">
+                      <h5 class="card-title">Ms. Allyson</h5>
+                      <p class="card-text">Associate Artistic Director and Ballet Teacher</p>
+                    </div>
                   </div>
-                </div>
-            </div>
-            <div class="col-lg-3">
-                <div class="card" style="width: 18rem;">
-                  <img class="card-img-top" src="images/tracey.jpg" alt="Ms. Tracey">
-                  <div class="card-body">
-                    <h5 class="card-title">Ms. Tracey</h5>
-                    <p class="card-text">Modern Dance Teacher</p>
+              </div>
+              <div class="col-lg-3">
+                  <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="images/aimee.jpg" alt="Ms. Aimee">
+                    <div class="card-body">
+                      <h5 class="card-title">Ms. Aimee</h5>
+                      <p class="card-text">Ballet Teacher</p>
+                    </div>
                   </div>
-                </div>
-            </div>
+              </div>
+          </div>
+          <br>
+          <div class="row">
+              <div class="col-lg-3">
+                  <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="images/teanna.jpg" alt="Ms. Teanna">
+                    <div class="card-body">
+                      <h5 class="card-title">Ms. Teanna</h5>
+                      <p class="card-text">Ballet Teacher</p>
+                    </div>
+                  </div>
+              </div>
+              <div class="col-lg-3">
+                  <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="images/gayle.jpg" alt="Ms. Gayle">
+                    <div class="card-body">
+                      <h5 class="card-title">Ms. Gale</h5>
+                      <p class="card-text">Ballet Teacher (and scientist!)</p>
+                    </div>
+                  </div>
+              </div>
+              <div class="col-lg-3">
+                  <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="images/tracey.jpg" alt="Ms. Tracey">
+                    <div class="card-body">
+                      <h5 class="card-title">Ms. Tracey</h5>
+                      <p class="card-text">Modern Dance Teacher</p>
+                    </div>
+                  </div>
+              </div>
+          </div>
         </div>
         <form action="/action_page.php">
           <div class="form-group">
