--- a/challenge_4/index.html
+++ b/challenge_4/index.html
@@ -5,12 +5,14 @@
         <link rel="stylesheet" href="style.css" type="text/css"/>
     </head>
     <body>
-        <div class="jumbotron jumbotron-fluid">
-          <div class="container">
-            <h1 class="display-4">Hyde Park School of Dance</h1>
-            <p class="lead">A dance school on the south side of Chicago that offers ballet, pointe, modern, jazz, hip hop, and african dance</p>
-          </div>
+        <center>
+          <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+              <h1 class="display-4">Hyde Park School of Dance</h1>
+              <p class="lead">A dance school on the south side of Chicago that offers ballet, pointe, modern, jazz, hip hop, and african dance</p>
+            </div>
         </div>
+        </center>
         <div class="container">
          <nav class="navbar navbar-expand-sm bg-secondary navbar-dark">
           <ul class="navbar-nav">
@@ -34,7 +36,7 @@
         <br>
         <div class="container-fluid">
           <div class="row">
-              <div class="col-lg-3">
+              <div class="col-lg-4">
                   <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="images/msaugust.png" alt="Ms. August Tye">
                     <div class="card-body">
@@ -43,7 +45,7 @@
                     </div>
                   </div>
               </div>
-              <div class="col-lg-3">
+              <div class="col-lg-4">
                   <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="images/allyson.jpg" alt="Ms. Allyson">
                     <div class="card-body">
@@ -52,7 +54,7 @@
                     </div>
                   </div>
               </div>
-              <div class="col-lg-3">
+              <div class="col-lg-4">
                   <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="images/aimee.jpg" alt="Ms. Aimee">
                     <div class="card-body">
@@ -64,7 +66,7 @@
           </div>
           <br>
           <div class="row">
-              <div class="col-lg-3">
+              <div class="col-lg-4">
                   <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="images/teanna.jpg" alt="Ms. Teanna">
                     <div class="card-body">
@@ -73,7 +75,7 @@
                     </div>
                   </div>
               </div>
-              <div class="col-lg-3">
+              <div class="col-lg-4">
                   <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="images/gayle.jpg" alt="Ms. Gayle">
                     <div class="card-body">
@@ -82,7 +84,7 @@
                     </div>
                   </div>
               </div>
-              <div class="col-lg-3">
+              <div class="col-lg-4">
                   <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="images/tracey.jpg" alt="Ms. Tracey">
                     <div class="card-body">
