--- a/challenge_4/index.html
+++ b/challenge_4/index.html
@@ -16,7 +16,7 @@
         <div class="container">
          <nav class="navbar navbar-expand-sm bg-secondary navbar-dark">
           <ul class="navbar-nav">
-            <a class="navbar-brand" href="/challenge_4/index.html"><img src="images/hpsd.png" alt="hpsd logo" width="50px"></a>
+            <a class="navbar-brand" href="https://tkennedy3.github.io/webdev1819/challenge_4/index.html"><img src="images/hpsd.png" alt="hpsd logo" width="50px"></a>
             <li class="nav-item">
               <a class="nav-link" href="https://hydeparkdance.org/">HPSD's Website</a>
             </li>
@@ -37,7 +37,7 @@
         <div class="container-fluid">
           <div class="row">
               <div class="col-lg-4">
-                  <div class="card" style="width: 18rem;">
+                  <div class="card" style="width: 18rem; height: 26rem;">
                     <img class="card-img-top" src="images/msaugust.png" alt="Ms. August Tye">
                     <div class="card-body">
                       <h5 class="card-title">Ms. August</h5>
