--- a/challenge_6/index.html
+++ b/challenge_6/index.html
@@ -48,7 +48,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     <!-- Header -->
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1>Panic! at the Disco</h1> 
+        <center>
+        <img src="images/patdlogo.jpg">
+        </center>
       </div>
     </div>
     
@@ -75,7 +77,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
                             <div class="modal-dialog">
                               <div class="modal-content">
                                 <div class="modal-header">
-                                  <h4 class="modal-title"><img src="images/PFTW.jpg" alt="Pray for the Wicked" style="width: 18em;"></h4>
+                                  <h3 class="modal-title">PRAY FOR THE WICKED</h3>
                                   <button type="button" class="close" data-dismiss="modal">&times;</button>
                                 </div>
                                 <div class="modal-body">
@@ -109,7 +111,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
                             <div class="modal-dialog">
                               <div class="modal-content">
                                 <div class="modal-header">
-                                  <h4 class="modal-title"><img src="images/DOAB.jpg" alt="Death of a Bachelor" style="width: 18em;"></h4>
+                                  <h3 class="modal-title">DEATH OF A BACHELOR</h3>
                                   <button type="button" class="close" data-dismiss="modal">&times;</button>
                                 </div>
                                 <div class="modal-body">
@@ -142,7 +144,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
                             <div class="modal-dialog">
                               <div class="modal-content">
                                 <div class="modal-header">
-                                  <h4 class="modal-title"><img src="images/TWTLTRTD.png" alt="Too Weird to Live, Too Rare to Die!" style="width: 18em;"></h4>
+                                  <h3 class="modal-title">TOO WEIRD TO LIVE, TOO RARE TO DIE</h3>
                                   <button type="button" class="close" data-dismiss="modal">&times;</button>
                                 </div>
                                 <div class="modal-body">
@@ -180,7 +182,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
                             <div class="modal-dialog">
                               <div class="modal-content">
                                 <div class="modal-header">
-                                  <h4 class="modal-title"><img src="images/VV.jpg" alt="Vices and Virtues" style="width: 18em;"></h4>
+                                  <h3 class="modal-title">VICES AND VIRTUES</h3>
                                   <button type="button" class="close" data-dismiss="modal">&times;</button>
                                 </div>
                                 <div class="modal-body">
@@ -213,7 +215,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
                             <div class="modal-dialog">
                               <div class="modal-content">
                                 <div class="modal-header">
-                                  <h4 class="modal-title"><img src="images/PO.jpg" alt="Pretty. Odd." style="width: 18em;"></h4>
+                                  <h3 class="modal-title">PRETTY. ODD.</h3>
                                   <button type="button" class="close" data-dismiss="modal">&times;</button>
                                 </div>
                                 <div class="modal-body">
@@ -246,7 +248,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
                             <div class="modal-dialog">
                               <div class="modal-content">
                                 <div class="modal-header">
-                                  <h4 class="modal-title"><img src="images/AFYCSO.jpg" alt="A Fever You Can't Sweat Out" style="width: 18em;"></h4>
+                                  <h3 class="modal-title">A FEVER YOU CAN'T SWEAT OUT</h3>
                                   <button type="button" class="close" data-dismiss="modal">&times;</button>
                                 </div>
                                 <div class="modal-body">
@@ -287,14 +289,14 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
           <p class="bandtext">(2004-2009) FILLER TEXT MY DUDE</p>
         </div>
         <div class="w3-third w3-center">
-          <img src="#" alt="Ryan Ross" class="bandpics">
+          <img src="images/ryanross.jpg" alt="Ryan Ross" class="bandpics">
         </div>
       </div>
     </div>
     <div class="w3-row-padding w3-padding-64 w3-container">
       <div class="w3-content">
         <div class="w3-third w3-center">
-          <img src="#" alt="Dallon Weekes" class="bandpics">
+          <img src="images/dallonweekes.jpg" alt="Dallon Weekes" class="bandpics">
         </div>
         <div class="w3-twothird">
           <h4>Dallon Weekes</h4>
@@ -309,14 +311,14 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
           <p class="bandtext">(2006-2009) FILLER TEXT MY DUDE</p>
         </div>
         <div class="w3-third w3-center">
-          <img src="#" alt="Jon Walker" class="bandpics">
+          <img src="images/jonwalker.jpg" alt="Jon Walker" class="bandpics">
         </div>
       </div>
     </div>
     <div class="w3-row-padding w3-padding-64 w3-container">
       <div class="w3-content">
         <div class="w3-third w3-center">
-          <img src="#" alt="Spencer Smith" class="bandpics">
+          <img src="images/spencersmith.jpeg" alt="Spencer Smith" class="bandpics">
         </div>
         <div class="w3-twothird">
           <h4>Spencer Smith</h4>
