--- a/challenge_6/index.html
+++ b/challenge_6/index.html
@@ -29,10 +29,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
          <div class="w3-bar w3-card w3-left-align w3-large w3-gray">
             <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-large" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
             <a href="#" class="w3-bar-item w3-button w3-padding-large w3-hover-black"><img src="images/patd2.png" alt="logo"></a>
-            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-black">Albums</a>
-            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-black">Members</a>
-            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-black">Tours</a>
-            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-black">History</a>
+            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-black">Official Site</a>
+            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-black">Merch</a>
+            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-black">Listen!</a>
         </div>
       </div>
     
@@ -66,8 +65,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
                       <div class="card-body">
                         <h5 class="card-title">Pray for the Wicked</h5>
                         <p class="card-text">
-                          2018
-                           blah blah
+                          Released: 2018
                           <br>
                           <!-- modal -->
                           <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#myModal">
@@ -81,7 +79,22 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
                                   <button type="button" class="close" data-dismiss="modal">&times;</button>
                                 </div>
                                 <div class="modal-body">
-                                  This is information about the 2018 album, Pray for the Wicked
+                                  Pray for the Wicked is Panic!'s most recent album. With songs like "High Hopes" and "Say Amen (Saturday Night)", it has been an overall hit with fans
+                                  <br>
+                                  <h5>Songs</h5>
+                                  <ol>
+                                    <li>(**** A) Silver Lining</li>
+                                    <li>Say Amen (Saturday Night)</li>
+                                    <li>Hey Look Ma, I Made It</li>
+                                    <li>High Hopes</li>
+                                    <li>Roaring 20s</li>
+                                    <li>Dancing's Not A Crime</li>
+                                    <li>One Of The Drunks</li>
+                                    <li>The Overpass</li>
+                                    <li>King Of The Clouds</li>
+                                    <li>Old Fashioned</li>
+                                    <li>Dying in LA</li>
+                                  </ol>
                                 </div>
                                 <div class="modal-footer">
                                   <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
@@ -100,8 +113,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
                       <div class="card-body">
                         <h5 class="card-title">Death of a Bachelor</h5>
                         <p class="card-text">
-                          2016
-                          blah blah blah
+                          Released: 2016
                           <br>
                           <!-- modal -->
                           <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#myModal">
@@ -115,7 +127,22 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
                                   <button type="button" class="close" data-dismiss="modal">&times;</button>
                                 </div>
                                 <div class="modal-body">
-                                  info info info info
+                                  infooo
+                                  <br>
+                                  <h5>Songs</h5>
+                                  <ol>
+                                    <li>Victorious</li>
+                                    <li>Don't Threaten Me With A Good Time</li>
+                                    <li>Hallelujah</li>
+                                    <li>Emperor's New Clothes</li>
+                                    <li>Death Of A Bachelor</li>
+                                    <li>Crazy=Genius</li>
+                                    <li>LA Devotee</li>
+                                    <li>Golden Days</li>
+                                    <li>The Good, The Bad, And The Dirty</li>
+                                    <li>House Of Memories</li>
+                                    <li>Impossible Year</li>
+                                  </ol>
                                 </div>
                                 <div class="modal-footer">
                                   <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
@@ -149,6 +176,20 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
                                 </div>
                                 <div class="modal-body">
                                   info info
+                                  <br>
+                                  <h5>Songs</h5>
+                                  <ol>
+                                    <li>This Is Gospel</li>
+                                    <li>Miss Jackson (feat. LOLO)</li>
+                                    <li>Vegas Lights</li>
+                                    <li>Girld That You Love</li>
+                                    <li>Nicotine</li>
+                                    <li>Girls/Girls/Boys</li>
+                                    <li>Casual Affair</li>
+                                    <li>Far Too Young To Die</li>
+                                    <li>Collar Full</li>
+                                    <li>The End Of All Things</li>
+                                  </ol>
                                 </div>
                                 <div class="modal-footer">
                                   <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
@@ -186,7 +227,25 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
                                   <button type="button" class="close" data-dismiss="modal">&times;</button>
                                 </div>
                                 <div class="modal-body">
-                                  info info info info
+                                  info info 
+                                  <br>
+                                  <h5>Songs</h5>
+                                  <ol>
+                                    <li>The Ballad Of Mona Lisa</li>
+                                    <li>Let's Kill Tonight</li>
+                                    <li>Hurricane</li>
+                                    <li>Memories</li>
+                                    <li>Trade Mistakes</li>
+                                    <li>Ready To Go</li>
+                                    <li>Always</li>
+                                    <li>The Calendar</li>
+                                    <li>Sarah Smiles</li>
+                                    <li>Nearly Witches</li>
+                                    <li>Stall Me</li>
+                                    <li>Oh Glory</li>
+                                    <li>I Wanna Be Free</li>
+                                    <li>Turn Off The Lights</li>
+                                  </ol>
                                 </div>
                                 <div class="modal-footer">
                                   <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
@@ -220,6 +279,25 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
                                 </div>
                                 <div class="modal-body">
                                   info info info info
+                                  <br>
+                                  <H5>Songs</H5>
+                                  <ol>
+                                    <li>We're So Starving</li>
+                                    <li>Nine In The Afternoon</li>
+                                    <li>She's A Handsome Woman</li>
+                                    <li>Do You Know What I'm Seeing</li>
+                                    <li>That Green Gentleman</li>
+                                    <li>I Have Friends In Holy Spaces</li>
+                                    <li>Northern Downpour</li>
+                                    <li>When The Day Met The Night</li>
+                                    <li>Pas De Cheval</li>
+                                    <li>The Piano Knows Something I Don't</li>
+                                    <li>Behind The Sea</li>
+                                    <li>Folkin' Around</li>
+                                    <li>She Had The World</li>
+                                    <li>From A Mountain In The Middle Of The Cabins</li>
+                                    <li>Mad As Rabbits</li>
+                                  </ol>
                                 </div>
                                 <div class="modal-footer">
                                   <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
@@ -252,7 +330,24 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
                                   <button type="button" class="close" data-dismiss="modal">&times;</button>
                                 </div>
                                 <div class="modal-body">
-                                  info info info info
+                                  info info 
+                                  <br>
+                                  <h5>Songs</h5>
+                                  <ol>
+                                    <li>Introduction</li>
+                                    <li>The Only Difference Between Martyrdom and Suicide Is Press Coverage</li>
+                                    <li>London Beckoned Songs About Money Written by Machines</li>
+                                    <li>Nails for Breakfast, Tacks for Snacks</li>
+                                    <li>Camisado</li>
+                                    <li>Time To Dance</li>
+                                    <li>Lying Is the Most Fun a Girl Can Have Without Taking Her Clothes Off</li>
+                                    <li>Intermission</li>
+                                    <li>But It's Better If You Do</li>
+                                    <li>I Write Sins Not Tragedies</li>
+                                    <li>I Constantly Thank God for Esteban</li>
+                                    <li>There’s a Good Reason These Tables Are Numbered Honey, You Just Haven’t Thought of It Yet</li>
+                                    <li>Build God, Then We'll Talk</li>
+                                  </ol>
                                 </div>
                                 <div class="modal-footer">
                                   <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
@@ -385,11 +480,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
           </ul>
           <li>2015-2017</li>
           <ul style="list-style-type:none">
-            <li>infooo</li>
+            <li>"Death of a Bachelor" is released on January 15, 2016. The band went on tour with Weezer from June to August in 2016 and announced the Death of a Bachelor tour in 2017.</li>
           </ul>
           <li>2017-Present</li>
           <ul style="list-style-type:none">
-            <li>infooo</li>
+            <li>"Pray for the Wicked" is released on June 22, 2018. They had a 2018 Pray for the Wicked tour and will be touring again in 2019. </li>
           </ul>
         </ul>
       </div>
